--- a/Overcome/Config/DefaultEngine.ini
+++ b/Overcome/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Map/TestMap.TestMap
-EditorStartupMap=/Game/Map/TestMap.TestMap
+GameDefaultMap=/Game/YSMap.YSMap
+EditorStartupMap=/Game/YSMap.YSMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
