--- a/Overcome/Config/DefaultEngine.ini
+++ b/Overcome/Config/DefaultEngine.ini
@@ -1,8 +1,6 @@
-
-
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Map/TestMap.TestMap
-EditorStartupMap=/Game/Map/TestMap.TestMap
+GameDefaultMap=/Game/Map/AI.AI
+EditorStartupMap=/Game/Map/AI.AI
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -133,4 +131,6 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="Dynamic",NewName="WorldDynamic")
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
+
+[/Script/NavigationSystem.RecastNavMesh]
 
