--- a/Overcome/Config/DefaultEngine.ini
+++ b/Overcome/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Map/AI.AI
-EditorStartupMap=/Game/Map/AI.AI
+GameDefaultMap=/Game/Map/AITest.AITest
+EditorStartupMap=/Game/Map/AITest.AITest
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
