--- a/Overcome/.gitignore
+++ b/Overcome/.gitignore
@@ -84,5 +84,5 @@ Content/Vefects/*
 Content/DarkMetalPack/*
 Content/MapsBundle/*
 Content/Cyberpunk_Skyscraper/*
-
+Content/FXVarietyPack/*
 Packing/*
