--- a/Overcome/Config/DefaultEngine.ini
+++ b/Overcome/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Map/Map_1.Map_1
-EditorStartupMap=/Game/Map/Map_1.Map_1
+GameDefaultMap=/Game/Map/EmptyMap.EmptyMap
+EditorStartupMap=/Game/Map/EmptyMap.EmptyMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
