총 연발 구현

--- a/Overcome/Config/DefaultEngine.ini
+++ b/Overcome/Config/DefaultEngine.ini
@@ -45,6 +45,7 @@ r.Shadow.Virtual.Enable=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure=True
 r.DefaultFeature.AutoExposure.Method=0
+r.Mobile.ShadingPath=0
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
@@ -138,4 +139,10 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
 [/Script/NavigationSystem.RecastNavMesh]
+bForceRebuildOnLoad=True
+RuntimeGeneration=Dynamic
+
+[/Script/NavigationSystem.NavigationSystemV1]
+bSpawnNavDataInNavBoundsLevel=True
+bGenerateNavigationOnlyAroundNavigationInvokers=False
 
