--- a/Overcome/Config/DefaultGame.ini
+++ b/Overcome/Config/DefaultGame.ini
@@ -52,7 +52,7 @@ LocalizationTargetCatchAllChunkId=0
 bCookAll=False
 bCookMapsOnly=False
 bSkipEditorContent=False
-bSkipMovies=False
+bSkipMovies=True
 -IniKeyDenylist=KeyStorePassword
 -IniKeyDenylist=KeyPassword
 -IniKeyDenylist=rsa.privateexp
@@ -91,4 +91,5 @@ bSkipMovies=False
 -IniSectionDenylist=StorageServers
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
++DirectoriesToAlwaysStageAsUFS=(Path="UMG/Start")
 
