구르기할 때 조준 못하게 막기

--- a/Overcome/Config/DefaultEngine.ini
+++ b/Overcome/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Map/StartMap.StartMap
-EditorStartupMap=/Game/Map/StartMap.StartMap
+GameDefaultMap=/Game/Map/MainMap.MainMap
+EditorStartupMap=/Game/Map/MainMap.MainMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
