--- a/Overcome/Config/DefaultGame.ini
+++ b/Overcome/Config/DefaultGame.ini
@@ -91,5 +91,5 @@ bSkipMovies=True
 -IniSectionDenylist=StorageServers
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
-+DirectoriesToAlwaysStageAsUFS=(Path="UMG/Start")
++DirectoriesToAlwaysStageAsUFS=(Path="Asset/Movie")
 
