--- a/Overcome/Config/DefaultEngine.ini
+++ b/Overcome/Config/DefaultEngine.ini
@@ -44,8 +44,9 @@ r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure=True
-r.DefaultFeature.AutoExposure.Method=0
+r.DefaultFeature.AutoExposure.Method=2
 r.Mobile.ShadingPath=0
+r.DefaultFeature.AutoExposure.Bias=13.824479
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
@@ -140,6 +141,7 @@ ManualIPAddress=
 
 [/Script/NavigationSystem.RecastNavMesh]
 bForceRebuildOnLoad=True
+RuntimeGeneration=Static
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bSpawnNavDataInNavBoundsLevel=True
