Cull Distance Volume 설정

--- a/Overcome/Config/DefaultEngine.ini
+++ b/Overcome/Config/DefaultEngine.ini
@@ -47,6 +47,7 @@ r.DefaultFeature.AutoExposure=True
 r.DefaultFeature.AutoExposure.Method=2
 r.Mobile.ShadingPath=0
 r.DefaultFeature.AutoExposure.Bias=13.824479
+r.AllowOcclusionQueries=True
 
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
