--- a/Overcome/Config/DefaultEngine.ini
+++ b/Overcome/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Map/EmptyMap.EmptyMap
-EditorStartupMap=/Game/Map/EmptyMap.EmptyMap
+GameDefaultMap=/Game/Cyberpunk_Skyscraper/Maps/Boss.Boss
+EditorStartupMap=/Game/Cyberpunk_Skyscraper/Maps/Boss.Boss
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
