--- a/Overcome/Config/DefaultGame.ini
+++ b/Overcome/Config/DefaultGame.ini
@@ -91,5 +91,9 @@ bSkipMovies=True
 -IniSectionDenylist=StorageServers
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
++MapsToCook=(FilePath="/Game/Map/EmptyMap")
++MapsToCook=(FilePath="/Game/Map/MainMap")
++MapsToCook=(FilePath="/Game/Map/StartMap")
++MapsToCook=(FilePath="/Game/Cyberpunk_Skyscraper/Maps/Boss")
 +DirectoriesToAlwaysStageAsUFS=(Path="Asset/Movie")
 
