일시정지 - 다시 시작 제거

--- a/Overcome/Config/DefaultEngine.ini
+++ b/Overcome/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Map/EmptyMap.EmptyMap
-EditorStartupMap=/Game/Map/EmptyMap.EmptyMap
+GameDefaultMap=/Game/Map/StartMap.StartMap
+EditorStartupMap=/Game/Map/StartMap.StartMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
