--- a/Overcome/Config/DefaultGame.ini
+++ b/Overcome/Config/DefaultGame.ini
@@ -96,4 +96,5 @@ bSkipMovies=True
 +MapsToCook=(FilePath="/Game/Map/StartMap")
 +MapsToCook=(FilePath="/Game/Cyberpunk_Skyscraper/Maps/Boss")
 +DirectoriesToAlwaysStageAsUFS=(Path="Asset/Movie")
++DirectoriesToAlwaysStageAsUFS=(Path="Sound")
 
