데미지 리펙토링

--- a/Overcome/Config/DefaultEngine.ini
+++ b/Overcome/Config/DefaultEngine.ini
@@ -148,3 +148,7 @@ RuntimeGeneration=Static
 bSpawnNavDataInNavBoundsLevel=True
 bGenerateNavigationOnlyAroundNavigationInvokers=False
 
+
+[CoreRedirects]
++EnumRedirects=(OldName="/Script/Overcome.E_MovementSpeed",NewName="/Script/Overcome.EMovementSpeed")
++EnumRedirects=(OldName="/Script/Overcome.E_AIState",NewName="/Script/Overcome.EAIState")
